--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <body>
         <h1>Welcome</h1>
         <p>Hello there user welcome to the test site and this site will be updated please check up on this "website"</p>
+
+        <input>YO:</input>
+
         <form action="page2.html">
             <button>Next</button>
         </form>
